Fix width nickname width on mobile device

--- a/src/layouts/Characters/CharacterDetails/CharacterDetails.module.scss
+++ b/src/layouts/Characters/CharacterDetails/CharacterDetails.module.scss
@@ -224,7 +224,7 @@
             align-items: flex-start;
 
             .ver-name {
-                width: 50%;
+                width: 80%;
                 text-align: left;
             }
         }
